<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTomate"
    tools:context=".fragment.ListRestaurantFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_verticale_005"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_verticale_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/your_location"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/guideline_verticale_005"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_location_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Tunisia"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_verticale_005"
        app:layout_constraintTop_toBottomOf="@id/tv_location" />

    <ImageView
        android:id="@+id/img_list_type"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_map"
        android:backgroundTint="@color/colorTomate"
        app:layout_constraintBottom_toBottomOf="@+id/tv_location_value"
        app:layout_constraintEnd_toEndOf="@id/guideline_verticale_95"
        app:layout_constraintTop_toTopOf="@+id/tv_location" />

    <HorizontalScrollView
        android:id="@+id/horizontal_scroll_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideline_verticale_005"
        app:layout_constraintEnd_toEndOf="@id/guideline_verticale_95"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_location_value">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacingVertical="10dp"
            app:chipSpacingHorizontal="10dp"
            app:chipSpacing="10dp"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant"
                app:layout_constraintStart_toStartOf="@id/guideline_verticale_005"
                app:layout_constraintTop_toBottomOf="@+id/tv_location_value" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_cafe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/cafe_amp_bar"
                app:layout_constraintStart_toEndOf="@id/chip_restaurant"
                app:layout_constraintTop_toBottomOf="@+id/tv_location_value" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_food_cars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/food_cars"
                app:layout_constraintStart_toEndOf="@id/chip_cafe"
                app:layout_constraintTop_toBottomOf="@+id/tv_location_value" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/coffee"
                app:layout_constraintStart_toEndOf="@id/chip_food_cars"
                app:layout_constraintTop_toBottomOf="@+id/tv_location_value" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_restaurant"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="@id/guideline_verticale_005"
        app:layout_constraintEnd_toEndOf="@id/guideline_verticale_95"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_scroll_view"
        tools:listitem="@layout/item_restaurant"
        tools:itemCount="3"
        />
</androidx.constraintlayout.widget.ConstraintLayout>